# datateller-org.github.io

./: .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  CNAME  LICENSE  README.md  index.html  index.md  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: docs.yaml  main.yaml  release.yaml
changelog/: index.html
conda/: dev.yaml
contributing/: contributing.md  index.html
datamancy/titanic/: index.html
docs/: contributing.md  example.ipynb  index.md  installation.md
docs/api/: references.md
docs/notebooks/titanic/output/: RandomForestClassifier.csv
notebooks/titanic/: index.html  index.ipynb
notebooks/titanic/output/: svc.csv
search/: search_index.json
src/datateller/: __init__.py
tests/: __init__.py  test_datateller.py
