[tool.poetry]
name = "datateller-nb"
version = "0.1.0" #semantic-release
description = "Data Teller aims to predict the future from data"
readme = "README.md"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "BSD 3 Clause"
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "3.11"
ipython = "<8"
ipykernel = ">=6.0.0"
Jinja2 = ">=3.1.2"
mkdocs = ">=1.4.3"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.1"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = ">=9.1.15"
mkdocstrings = ">=0.21.2"
mkdocstrings-python = ">=1.1.2"
makim = ">=1.14.0,<1.15"
jupyter-dashboards = ">=0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pre-commit = ">=3.3.2"
ruff = ">=0.2.0"
# 'PosixPath' object has no attribute 'endswith'
virtualenv = "<=20.25.1"
nbmake = ">=1.5.3"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
fixable = ["I001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Use a single line between direct and from import
lines-between-types = 1
